# lcc

./: .clang-format  .gitignore  flake.nix  meson.build
include/: ast.h  breakpoint.h  codegen.h  defs.h  lexer.h  parser.h  symbol_table.h  token.h  utils.h
include/ast/: ast.h  ast_visualizer.h  prepass.h
include/codegen/: asm_file.h  codegen.h
include/codegen/x86/: cg.h
include/data_table/: function_table.h  symbol_table.h
include/lexer/: lexer.h
include/lowering/: pre_codegen.h  tacgen.h
include/parser/: declaration.h  expression.h  identifier.h  parser.h  statement.h  utils.h
include/sema/: declaration_order_pass.h  type_pass.h
src/: ast_visualizer.c  codegen.c  lexer.c  main.c  parser.c  symbol_table.c  utils.c
src/ast/: ast.c  ast_visualizer.c  prepass.c
src/codegen/: asm_file.c  codegen.c
src/codegen/x86/: cg.c
src/data_table/: symbol_table.c
src/lexer/: lexer.c
src/lowering/: pre_codegen.c  tacgen.c
src/parser/: declaration.c  expression.c  identifier.c  parser.c  statement.c  utils.c
src/sema/: declaration_order_pass.c  type_pass.c
test_input/: 00  01
tests/: compare.sh  expected_02  expected_04  expected_05  expected_06  expected_07  expected_10  expected_11  expected_13  expected_15  expected_16  input_00  input_01  input_02  input_03  input_04  input_05  input_06  input_07  input_08  input_09  input_10  input_11  input_12  input_13  input_14  input_15  input_16  mandelbrot
